--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Book Table</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./logo.jpeg">
+  <link rel="icon" type="image" href="./logo.jpeg">
 </head>
 <body>
   <app-root></app-root>
